# NotoMate

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  chainlit.md  fly.toml  pyproject.toml  sample.env
.chainlit/: config.toml
app/: graph.py  server.py  server_cl.py  server_cl_supervisor.py
app/.chainlit/: config.toml
app/chains/: helpers.py  notion.py
app/chains/notion/: api.py  supervisor.py
app/tools/: notion.py
noto_mate/: agent.py  lit.py
noto_mate/tools/: notion.py
src/: agent.py  app.py
