[tool.poetry]
name = "NotoMate"
version = "0.0.1"
description = "Personal assistant with access to Notion"
authors = ["Anatolii Stehnii <tsdaemon@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
notion-client = "^2.2.1"
chainlit = "^1.0.301"
langchain-openai = "^0.0.8"
langchain = "^0.1.11"
langchain-experimental = "^0.0.53"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120

select = ["E", "F", "I", "N", "UP", "INP"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".data",
    ".mypy_cache",
    "experiments",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.lint.isort]
known-local-folder = ["app"]
